--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,7 +26,7 @@ if (compileSdkVersion == null) {
 
 buildscript {
     ext.kotlin_version = "1.7.10"
-    ext.drivekit_version = "2.3.0"
+    ext.drivekit_version = "2.4-beta1"
     repositories {
         google()
         mavenCentral()
@@ -85,7 +85,7 @@ android {
         testImplementation("org.jetbrains.kotlin:kotlin-test")
         testImplementation("org.mockito:mockito-core:5.0.0")
 
-        implementation "com.drivequant.drivekit:drivekit-trip-analysis:$drivekit_version"
+        api "com.drivequant.drivekit:drivekit-trip-analysis:$drivekit_version"
     }
 
     testOptions {
